--- a/Monumap/Storyboards/Base.lproj/Main.storyboard
+++ b/Monumap/Storyboards/Base.lproj/Main.storyboard
@@ -93,19 +93,19 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mont Saint-Michel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="xPJ-Zn-pVk">
-                                                            <rect key="frame" x="0.0" y="214" width="200" height="23.5"/>
+                                                            <rect key="frame" x="0.0" y="214.5" width="200" height="23.5"/>
                                                             <fontDescription key="fontDescription" name="Lora-Bold" family="Lora" pointSize="18"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lower Normandy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="MFv-xr-zjl">
-                                                            <rect key="frame" x="0.0" y="240.5" width="200" height="15"/>
+                                                            <rect key="frame" x="0.0" y="241" width="200" height="15"/>
                                                             <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="France | 1984" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="27T-zc-P6l">
-                                                            <rect key="frame" x="0.0" y="262.5" width="200" height="12.5"/>
+                                                            <rect key="frame" x="0.0" y="263" width="200" height="12"/>
                                                             <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="10"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -169,21 +169,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Map" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="152.5" y="313" width="70.5" height="42"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="GBv-uk-K79">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" red="0.69019607839999997" green="0.88235294119999996" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
+                            <constraint firstItem="GBv-uk-K79" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="0G6-Xq-ZAP"/>
+                            <constraint firstItem="GBv-uk-K79" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" id="IJG-NB-Z9c"/>
+                            <constraint firstAttribute="trailing" secondItem="GBv-uk-K79" secondAttribute="trailing" id="RC4-D2-Ngi"/>
+                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="GBv-uk-K79" secondAttribute="bottom" id="cHt-In-ueT"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="MAP" image="icnMenuMap" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="mapView" destination="GBv-uk-K79" id="Ann-JX-dIk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
